<resources>
    <string name="app_name">M1</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_compose_based">ComposeBasedActivity</string>
    <string name="grant_location_permission_button_text">Grant Location Permission</string>
    <string name="open_compose_based_view_button_text">Open Compose Based View</string>
    <string name="open_google_maps_activity">Open Google Maps Activity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="timer">Timer</string>
    <string name="phone_details">Phone Details</string>
    <string name="my_favourite_city">My Favourite City</string>
    <string name="login_server_info">Login + Server Info</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="mapbox_button_text">Open Mapbox App</string>
    <string name="title_activity_mapbox">Mapbox Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_Title">Why sign in?</string>
    <string name="sign_in_body">Signing in allows you to set up a profile. This lets you personalize your experience with the application, as well as allowing you to comment on weather pings</string>
    <string name="default_notification_channel_id">com.google.firebase.messaging.default_notification_channel_id</string>
    <string name="wildfire">Wildfire</string>
    <string-array name="marker_types">
        <item>Warning</item>
        <item>Safehouse</item>
        <item>Resource</item>
    </string-array>
</resources>